--- a/finalProject/TSW2/templates/TSW2/showcase.html
+++ b/finalProject/TSW2/templates/TSW2/showcase.html
@@ -3,7 +3,7 @@
 
 {% block body %} 
     <div class="titleDivsM">
-        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/game-play-showcase.png" class="bgImg">
+        <img src="https://williamraineyapplication.files.wordpress.com/2021/10/game-play-showcase1.png" class="bgImg">
     </div>
     <hr style="background-color: rgb(248, 239, 207); width: 90%">
     <br>
@@ -111,8 +111,52 @@
     <br>
     <br>
     <br>
+    <div style="text-align:center;" id="p1" class="snippet">
+        <p class="articleHeaders" >1.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">A unit coal train headed East out of the Shaw loading facility has encountered a traction problem, and would like us to take a pair of helper engines to help them up the grade to Sandpatch. Reporting as X570, we hop on board the pair of GP38-2s and take them to the Sandpatch Crossovers.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p2" class="snippet">
+        <p class="articleHeaders">2.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">Now that we’re above the crossovers, we get clearance from the dispatcher to take the helper engines to Salisbury Junction where the coal train is waiting for us. The GP38-2s start to throttle up as they start to slowly roll down the grade.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p3" class="snippet">
+        <p class="articleHeaders">3.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">Arriving at Salisbury Junction, we bring the locomotives to a stop before getting clearance from the dispatcher to couple onto the coal train.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p4" class="snippet">
+        <p class="articleHeaders">4.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">Once we’ve got clearance from dispatch, we proceed at reduced speed and couple onto the coal train. To our left, a tank train slowly climbs the hill towards the summit at Sandpatch.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p5" class="snippet">
+        <p class="articleHeaders">5.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">Now that we’re coupled to the train, it’s time to get this show on the road. We start the train rolling with orders to stop near the summit at Sandpatch. At the end of the train, a pair of SD40-2s pushes from behind, bringing up the power of the train to 10,000 horsepower.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p6" class="snippet">
+        <p class="articleHeaders">6.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">Now reporting as train B251, the train roars underneath the Highway 219 overpass. We blast the horn at the grade crossing and continue onwards up the hill.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p7" class="snippet">
+        <p class="articleHeaders">7.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">The highway now behind us, we roll over the girder bridge that crosses Blue Lick Creek. The sounds of screaming steel and rumbling diesel engines echo off the walls of the mountain valley.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p8" class="snippet">
+        <p class="articleHeaders">8.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">B251 can next be seen at the grade crossing in Meyersdale, PA. The train grinds up the hill at a cool 18 mph, with both locomotives at full throttle.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p9" class="snippet">
+        <p class="articleHeaders">9.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">As we near the summit of the Alleghenies, we throttle down the locomotives and prepare to stop at Sandpatch. Underneath the Deal Street bridge, our train can be seen crawling slowly up towards our destination.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p10" class="snippet">
+        <p class="articleHeaders">10.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">Once we’ve made our stop at Sandpatch, we are given instructions to proceed along the mainline to the yard at Cumberland, MA. We throttle up the locomotives, and slowly the train starts to inch forward. We’re starting the train on a steep grade, and it takes nearly full throttle and sand to keep the train from rolling backwards.</p>
+    </div>
+    <div style="text-align:center; display: none;" id="p11" class="snippet">
+        <p class="articleHeaders">11.</p>
+        <p class="comparisonParagraphs" style="text-align: center; margin-left: 18%">And finally, B251 disappears into Sandpatch Tunnel, destined for Cumberland yard and beyond!</p>
+    </div>
     <br>
-    
+    <br>
     <br>
     <br>
 {% endblock %} 
