--- a/finalProject/TSW2/templates/TSW2/spotlights.html
+++ b/finalProject/TSW2/templates/TSW2/spotlights.html
@@ -13,14 +13,14 @@
     <div class="articleContainer">
         <p class="comparisonParagraphs" style="text-align: center; font-size: 35px;">
             Interested in knowing a bit more about the three main locations included in Train Sim World 2? Maybe you'd like
-            to see how acurately your favorite location was rebuilt within the game? Click a location below to find out more.
+            to see how accurately your favorite location was rebuilt within the game? Click a location below to find out more.
         </p>
     </div>
     <br>
     <br>
     <br>
     <!--article selector-->
-    <div class="container" style="display: flex; justify-content:center">
+    <div class="container" style="display: flex; justify-content:center; margin-right: 180px;">
         <div class="btn-group" role="group" style="width: 100%">
             <button type="button" class="btn btn-secondary" style="font-size: 25px;" autofocus value="sandpatch" id="selectorButton">CSX's Sandpatch Grade</button>
             <button type="button" class="btn btn-secondary" style="font-size: 25px;" value="bakerloo" id="selectorButton">The Bakerloo Line</button>
@@ -152,7 +152,7 @@
         </div>
         <div class="articleContainer">
             <p class="comparisonParagraphs">
-                The Schenllfahstrecke Köln-Aachen has a long and storied history, beginning with the opening of the first section of track between Cologne and Müngersforf, Germany. The first train between the two towns made the 6.8 km journey on August 2, 1839. Another section was opened between Müngersdorf and Lövenich in July of 1840, and the final extension was made to Aachen on September 1, 1841. The first train ran between Cologne and the Belgium border on October 15, 1843, making it a part of the world’s first cross border railway. 
+                The Schnellfahstrecke Köln-Aachen has a long and storied history, beginning with the opening of the first section of track between Cologne and Müngersforf, Germany. The first train between the two towns made the 6.8 km journey on August 2, 1839. Another section was opened between Müngersdorf and Lövenich in July of 1840, and the final extension was made to Aachen on September 1, 1841. The first train ran between Cologne and the Belgium border on October 15, 1843, making it a part of the world’s first cross border railway. 
             </p>
         </div>
         <br>
@@ -164,7 +164,7 @@
         <br>
         <div class="articleContainer">
             <p class="comparisonParagraphs">
-                During World Wars One and Two, the line was strategically important for the German army. During both wars, the Schenllfahstrecke Köln-Aachen was used to transport troops, supplies, and weapons for the German’s invasion of France. The line was subject to several attacks during the Second World War, one of which resulted in the deaths of 80 people. The train, made up of locked freight cars, was attacked with bombs and gunfire, resulting in the discontinuation of rail traffic between Aachen and Cologne on November 16, 1944.
+                During World Wars One and Two, the line was strategically important for the German army. During both wars, the Schnellfahstrecke Köln-Aachen was used to transport troops, supplies, and weapons for the German’s invasion of France. The line was subject to several attacks during the Second World War, one of which resulted in the deaths of 80 people. The train, made up of locked freight cars, was attacked with bombs and gunfire, resulting in the discontinuation of rail traffic between Aachen and Cologne on November 16, 1944.
             </p>
         </div>
         <br>
