--- a/finalProject/TSW2/templates/TSW2/layout.html
+++ b/finalProject/TSW2/templates/TSW2/layout.html
@@ -33,7 +33,7 @@
                         <a class="nav-link" href="{% url 'spotlights' %}" style="font-size: 20px; margin-top: 7.75%; transform: translate(150px); color: rgb(248, 239, 207)">Location Spotlights</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'compendium' %}" style="font-size: 20px; margin-top: 2%; transform: translate(220px); color: rgb(248, 239, 207)">Train Sim World 2 Locomotive, Passenger Car, And Freight Car Fact Finder</a>
+                        <a class="nav-link" href="{% url 'compendium' %}" style="font-size: 20px; margin-top: 2%; transform: translate(220px, 12px); color: rgb(248, 239, 207)">Fact Finder</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'showcase' %}" style="font-size: 20px; transform: translate(300px, 12px); color: rgb(248, 239, 207)">Gameplay Showcase</a>
