--- a/finalProject/TSW2/templates/TSW2/compendium.html
+++ b/finalProject/TSW2/templates/TSW2/compendium.html
@@ -40,39 +40,39 @@
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Locomotive Name:</p>
-                    <input type="text" class="form-control" id="locoName" style="margin-top: 1.5%; margin-left: 2%; width:40%" required>
+                    <input type="text" class="form-control" id="locoName" style="margin-top: 1.5%; margin-left: 2%; width:40%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Locomotive Power Type:</p>
-                    <input type="text" class="form-control" id="locoPowerType" style="margin-top: 1.5%; margin-left: 2%; width:40%" required>
+                    <input type="text" class="form-control" id="locoPowerType" style="margin-top: 1.5%; margin-left: 2%; width:40%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Locomotive Length:</p>
-                    <input type="text" class="form-control" id="locoLength" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="locoLength" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Locomotive Height:</p>
-                    <input type="text" class="form-control" id="locoHeight" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="locoHeight" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px;">Enter Locomotive Top Speed (In mph):</p>
-                    <input type="number" class="form-control" id="locoSpeed" style="margin-top: 1.5%; margin-left: 2%; width:20%" min="1" required>
+                    <input type="number" class="form-control" id="locoSpeed" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" min="1" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Locomotive Horse Power:</p>
-                    <input type="number" class="form-control" id="locoHp" style="margin-top: 1.5%; margin-left: 2%; width:20%" min="1" required>
+                    <input type="number" class="form-control" id="locoHp" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" min="1" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Number Of Axels On Locomotive:</p>
-                    <input type="number" class="form-control" id="locoAxles" style="margin-top: 1.5%; margin-left: 2%; width:20%" min="1" required>
+                    <input type="number" class="form-control" id="locoAxles" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" min="1" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Location Locomotive Is Included With:</p>
-                    <input type="text" class="form-control" id="location" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="location" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter URL For Image (optional):</p>
-                    <input type="url" class="form-control" id="imageUrl" style="margin-top: 1.5%; margin-left: 2%; width:40%">
+                    <input type="url" class="form-control" id="imageUrl" style="margin-top: 1.5%; margin-left: 2%; width:40%; height: 40px;">
                 </div>
                 <button type="button" class="btn btn-primary" id="locoButton">Create New Entry</button>
             </div>
@@ -89,27 +89,27 @@
                 <br>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Freight Car Name:</p>
-                    <input type="text" class="form-control" id="freightName" style="margin-top: 1.5%; margin-left: 2%; width:40%" required>
+                    <input type="text" class="form-control" id="freightName" style="margin-top: 1.5%; margin-left: 2%; width:40%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Freight Car Length:</p>
-                    <input type="text" class="form-control" id="freightLength" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="freightLength" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Freight Car Width:</p>
-                    <input type="text" class="form-control" id="freightWidth" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="freightWidth" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Freight Car Height:</p>
-                    <input type="text" class="form-control" id="freightHeight" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="freightHeight" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px;">Enter Freight Car Capacity (In Tons):</p>
-                    <input type="number" class="form-control" id="freightCapacity" style="margin-top: 1.5%; margin-left: 2%; width:20%" min="1" required>
+                    <input type="number" class="form-control" id="freightCapacity" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" min="1" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter URL For Image (optional):</p>
-                    <input type="url" class="form-control" id="imageUrlFreight" style="margin-top: 1.5%; margin-left: 2%; width:40%">
+                    <input type="url" class="form-control" id="imageUrlFreight" style="margin-top: 1.5%; margin-left: 2%; width:40%; height: 40px;">
                 </div>
                 <button type="button" class="btn btn-primary" id="freightButton">Create New Entry</button>
             </div>
@@ -126,27 +126,27 @@
                 <br>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Passenger Car Name:</p>
-                    <input type="text" class="form-control" id="passengerName" style="margin-top: 1.5%; margin-left: 2%; width:40%" required>
+                    <input type="text" class="form-control" id="passengerName" style="margin-top: 1.5%; margin-left: 2%; width:40%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Passenger Car Length:</p>
-                    <input type="text" class="form-control" id="passengerLength" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="passengerLength" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Passenger Car Width:</p>
-                    <input type="text" class="form-control" id="passengerWidth" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="passengerWidth" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter Passenger Car Height:</p>
-                    <input type="text" class="form-control" id="passengerHeight" style="margin-top: 1.5%; margin-left: 2%; width:20%" required>
+                    <input type="text" class="form-control" id="passengerHeight" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px;">Enter Passenger Car Capacity:</p>
-                    <input type="number" class="form-control" id="passengerCapacity" style="margin-top: 1.5%; margin-left: 2%; width:20%" min="1" required>
+                    <input type="number" class="form-control" id="passengerCapacity" style="margin-top: 1.5%; margin-left: 2%; width:20%; height: 40px;" min="1" required>
                 </div>
                 <div style="display: inline-flex; width: 100%">
                     <p class="articleHeaders" style="font-size: 50px; ">Enter URL For Image (optional):</p>
-                    <input type="url" class="form-control" id="imageUrlPassenger" style="margin-top: 1.5%; margin-left: 2%; width:40%">
+                    <input type="url" class="form-control" id="imageUrlPassenger" style="margin-top: 1.5%; margin-left: 2%; width:40%; height: 40px;">
                 </div>
                 <button type="button" class="btn btn-primary" id="passengerButton">Create New Entry</button>
             </div>
